fix(core): update REI displays & recipe registration for 1.21.1, fix compost, silo block entity, and overlay rendering